Fix urls on github

--- a/_posts/2021-12-14-Welcome.md
+++ b/_posts/2021-12-14-Welcome.md
@@ -5,5 +5,5 @@ date:   2021-12-14 14:02:04 -0800
 categories: polyhobbyist
 ---
 
-Check out the [about page](/about)
+Check out the [about page]({{site.baseurl}}/about)
 
