--- a/_posts/2021-12-10-VSCode-S1E0.md
+++ b/_posts/2021-12-10-VSCode-S1E0.md
@@ -6,8 +6,14 @@ categories: VSCode_ROS
 ---
 
 # Season 1 Episode 0
+
+## YouTube
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PBbEhRf8QjE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Odysee
 <iframe id="odysee-iframe" width="560" height="315" src="https://odysee.com/$/embed/VSCodeS1E0/f4631972532538750161cf3cba123932e2dbb428?r=3DsbZDYU8eQYvumvF5KgKVwkqNS1eyMx" allowfullscreen></iframe>
 
+## Episodes
 * 0 – About the Visual Studio Code ROS extension
 * 1 – Installing and using on Windows & WSL
 * 2 – Installing and using on Linux
