--- a/_posts/2021-12-14-Welcome.md
+++ b/_posts/2021-12-14-Welcome.md
@@ -4,6 +4,16 @@ title:  "Welcome to a Polyhobbyist"
 date:   2021-12-14 14:02:04 -0800
 categories: polyhobbyist
 ---
+What is a Polyhobbyist? Well, it is someone who loves lots of hobbies. I’m a polyhobbyist, and you may be too! Professionally, I’m a Software Engineer at a large Software company outside of Seattle. I work in Robotics for work, and robotics as a hobby – which means the fun never stops!
 
-Check out the [about page]({{'about' | relative_url}})
+You know what they say, “Do what you love and you never work a day in your life”… (I wish that were true; some days…)
 
+Robotics is the ultimate intersection of disciplines – Electronics and Mechanics (mechatronics), Computer Vision and AI, Machining, modeling, 3d printing – and more.
+
+I’ve been a “Maker” for most of my life, although the culture either didn’t have a name – or more specifically had too many names… But it was a culture I identified with. So much so, I was able to work professionally as a Maker. 
+
+This website and associated youtube channel are hobbies as well. I’ve intended to do this for many years now, but found it hard to start… yet… another… hobby…
+
+I'm also posting this content on [Odysee](https://odysee.com/) - a distributed alternative to Youtube.
+
+I hope you enjoy what you see.  
