--- a/_posts/2021-12-10-VSCode-S1E1.md
+++ b/_posts/2021-12-10-VSCode-S1E1.md
@@ -7,10 +7,10 @@ categories: VSCode_ROS
 
 # Season 1 Episode 1
 ## YouTube
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bupAju0UAMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/bupAju0UAMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## Odysee
-<iframe id="odysee-iframe" width="560" height="315" src="https://odysee.com/$/embed/VSCodeS1E1/9c93bdccfebe8f2eeaf6bb00bdb3823a4ed62ade?r=3DsbZDYU8eQYvumvF5KgKVwkqNS1eyMx" allowfullscreen></iframe>
+<iframe id="odysee-iframe" width="100%" height="100%" src="https://odysee.com/$/embed/VSCodeS1E1/9c93bdccfebe8f2eeaf6bb00bdb3823a4ed62ade?r=3DsbZDYU8eQYvumvF5KgKVwkqNS1eyMx" allowfullscreen></iframe>
 
 ## Agenda
 * Installing ROS on Windows using Chocolatey. http://aka.ms/ros
