--- a/_posts/2021-12-10-VSCode-S1E1.md
+++ b/_posts/2021-12-10-VSCode-S1E1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "VSCode ROS Extension - Installing on Windows"
+title:  "VSCode ROS Extension - Season 1 Episode 1 - Installing on Windows"
 date:   2021-12-14 14:02:04 -0800
 categories: VSCode_ROS
 ---
