--- a/_posts/2021-12-10-VSCode-S1E4.md
+++ b/_posts/2021-12-10-VSCode-S1E4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "VSCode ROS Extension - Using with ROS2"
+title:  "VSCode ROS Extension - Season 1 Episode 4 - Using with ROS2"
 date:   2021-12-14 14:02:04 -0800
 categories: VSCode_ROS
 ---
