--- a/_posts/2021-12-10-VSCode-S1E2.md
+++ b/_posts/2021-12-10-VSCode-S1E2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "VSCode ROS Extension - Installing on Linux"
+title:  "VSCode ROS Extension - Season 1 Episode 2 - Installing on Linux"
 date:   2021-12-14 14:02:04 -0800
 categories: VSCode_ROS
 ---
