--- a/_posts/2021-12-10-VSCode-S1E8.md
+++ b/_posts/2021-12-10-VSCode-S1E8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "VSCode ROS Extension - Using with Dev Containers and containers over SSH"
+title:  "VSCode ROS Extension - Season 1 Episode 8 - Using with Dev Containers and containers over SSH"
 date:   2021-12-14 14:02:04 -0800
 categories: VSCode_ROS
 ---
